new menus adedd, needs polish

--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
     </script>
 </head>
 <body onload="popup();">
-    <div style="margin: none;">
-        
-
+    <div>
         <div class="header">
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a href="#">Home</a>
-                <a href="#">Services</a>
-                <a href="#">Clients</a>
-                <a href="#">Contact</a>
+                <a href="#">Beneficios</a>
+                <a href="#">Pick-up</a>
+                <a href="#">Delivery</a>
+                <a href="#">Mis pedidos</a>
+                <a href="#">Menú</a>
+                <a href="#">Franquicias</a>
+                <a href="#">QR</a>
+                <a href="#">Mi Perfil</a>
+                <a href="#">Mis cupones</a>
             </div>
             <span onclick="openNav()">
                 <svg class="menu-icon" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
