font changed, another slideshow  added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Mostaza - Hamburguesas con M mayúscula</title>
 
     <link href="./style/index.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
 </head>
 <body onload="popup()">
     <div>
