--- a/locales.html
+++ b/locales.html
@@ -8,6 +8,9 @@
     
     <link href="./style/locales.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="./js/locales.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div>
@@ -101,7 +104,7 @@
                 <div>
 
                 </div>
-                <div class="title">
+                <div>
                     Busca tu local más cercano
                 </div>
             </div>
