improved appearance, bugs on locales.js

--- a/select.html
+++ b/select.html
@@ -96,7 +96,6 @@
 
         <div class="back">
             <div class="button" onclick="back()">
-                
                 <svg class="icon" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5"></path>
                 </svg>
@@ -109,7 +108,7 @@
                 </svg>
 
                 <div class="text">
-                    Seleccionaste <b>Jose Pedro Varela 4862 ( CABA )</b>
+                    Seleccionaste <b class="address">Jose Pedro Varela 4862 ( CABA )</b>
                 </div>
 
             </div>    
