--- a/select.html
+++ b/select.html
@@ -108,7 +108,7 @@
                 </svg>
 
                 <div class="text">
-                    Seleccionaste <b class="address">Jose Pedro Varela 4862 ( CABA )</b>
+                    Seleccionaste <b class="address"></b>
                 </div>
 
             </div>    
