Revert "dynamic address added"
This reverts commit 748d01099115f1812438b26a036a4f2e628eb3db.

--- a/select.html
+++ b/select.html
@@ -108,7 +108,7 @@
                 </svg>
 
                 <div class="text">
-                    Seleccionaste <b class="address"></b>
+                    Seleccionaste <b class="address">Jose Pedro Varela 4862 ( CABA )</b>
                 </div>
 
             </div>    
