dynamic address added

--- a/locales.html
+++ b/locales.html
@@ -111,7 +111,7 @@
 
             <center><hr class="divider"></center>
             
-            <div id="1" class="location" onclick="addressChange(this)">
+            <div id="1" class="location" onclick="addressChange(this);">
                 <div id="1" class="location-title">
                     CARREFOUR WARNES
                 </div>
@@ -128,7 +128,7 @@
                     DEVOTO
                 </div>
                 <div id="2" class="location-description">
-                    <div id="2" id="address">Jose Pedro Varela 4862 ( CABA )</div>
+                    <div id="2" class="address">Jose Pedro Varela 4862 ( CABA )</div>
                     2.3km - Lunes a Domingos de 10:00 a 23:00hs  
                 </div>
             </div>
@@ -140,19 +140,19 @@
                     CARREFOUR SAN MARTIN
                 </div>
                 <div id="3" class="location-description">
-                    <div id="3" id="address">Av. San Martin 420 ( Provincia de Bs As )</div>
+                    <div id="3" class="address">Av. San Martin 420 ( Provincia de Bs As )</div>
                     2.8km - Lunes a Domingos de 08:00 a 22:00hs  
                 </div>
             </div>
 
             <center><hr class="divider"></center>
             
-            <div class="location">
+            <div id class="location">
                 <div class="location-title">
                     VILLA URQUIZA
                 </div>
                 <div class="location-description">
-                    <div id="address">Avenida Triunvirato 4714 ( CABA )</div>
+                    <div class="address">Avenida Triunvirato 4714 ( CABA )</div>
                     3.2km - Lunes a Domingos de 08:00 a 00:00hs  
                 </div>
             </div>
