common css and js created

--- a/pedidos.html
+++ b/pedidos.html
@@ -6,18 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostaza - Hamburguesas con M mayúscula</title>
 
+    <link href="./style/pedidos.css" rel="stylesheet" type="text/css">
     <link href="./style/common.css" rel="stylesheet" type="text/css">
-    <link href="./style/number.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="./js/common.js"></script>
-    <script type="text/javascript" src="./js/number.js"></script>
+    <script type="text/javascript" src="./js/pedidos.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div>
-        <div class="header-background"></div>
-        
         <div class="header">
             <span onclick="openNav()" class="micon">
                 <svg class="menu-icon" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
@@ -99,15 +97,9 @@
             </div>
         </div>
 
-        <div class="conteiner">
-            <div class="input-title">
-                <p>Ingrese su número de mesa</p>
-            </div>
-            <div class="text-input">
-                <input type="number" pattern="/^\d*$/" min="0" onKeyPress="if(this.value.length===3 || this.value.contains('-')) return false;" placeholder="000"/>
-            </div>
-            <div class="submit-button" onclick="">
-                <p>Ingresar</p>
+        <div>
+            <div class="toc">
+                
             </div>
         </div>
     </div>
