--- a/select.html
+++ b/select.html
@@ -7,6 +7,7 @@
     <title>Mostaza - Hamburguesas con M mayúscula</title>
 
     <link href="./style/select.css" rel="stylesheet" type="text/css">
+    <link href="./style/common.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
@@ -95,7 +96,7 @@
         </div>
 
         <div class="back">
-            <div class="button" onclick="back()">
+            <div class="button-back" onclick="back()">
                 <svg class="icon" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5"></path>
                 </svg>
@@ -173,6 +174,7 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="./js/common.js"></script>
     <script type="text/javascript" src="./js/select.js"></script>
 </body>
 </html>
