--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mostaza - Hamburguesas con M mayúscula</title>
 
     <link href="./style/index.css" rel="stylesheet" type="text/css">
+    <link href="./style/common.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
@@ -188,6 +189,8 @@
             </div>
         </div>
     </div>
+    
+    <script type="text/javascript" src="./js/common.js"></script>
     <script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
