--- a/locales.html
+++ b/locales.html
@@ -7,6 +7,8 @@
     <title>Mostaza - Hamburguesas con M mayúscula</title>
     
     <link href="./style/locales.css" rel="stylesheet" type="text/css">
+    <link href="./style/common.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="./js/common.js"></script>
     <script type="text/javascript" src="./js/locales.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
