--- a/select.html
+++ b/select.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostaza - Hamburguesas con M mayúscula</title>
 
-    <link href="./style/select.css" rel="stylesheet" type="text/css">
     <link href="./style/common.css" rel="stylesheet" type="text/css">
+    <link href="./style/select.css" rel="stylesheet" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onload="getAddress()">
     <div>
         <div class="header">
             <span onclick="openNav()" class="micon">
@@ -108,7 +108,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z"></path>
                 </svg>
 
-                <div class="text">
+                <div class="ltext">
                     Seleccionaste <b class="address">Jose Pedro Varela 4862 ( CABA )</b>
                 </div>
 
