first order arrived! finally!!!

--- a/number.html
+++ b/number.html
@@ -106,7 +106,7 @@
             <div class="text-input">
                 <input type="number" pattern="/^\d*$/" min="0" onKeyPress="if(this.value.length===3 || this.value.contains('-')) return false;" placeholder="000"/>
             </div>
-            <div class="submit-button" onclick="">
+            <div class="submit-button" onclick="openLink()">
                 <p>Ingresar</p>
             </div>
         </div>
