--- a/pedidos.html
+++ b/pedidos.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostaza - Hamburguesas con M mayúscula</title>
 
-    <link href="./style/pedidos.css" rel="stylesheet" type="text/css">
     <link href="./style/common.css" rel="stylesheet" type="text/css">
+    <link href="./style/pedidos.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="./js/common.js"></script>
     <script type="text/javascript" src="./js/pedidos.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,6 +16,8 @@
 </head>
 <body>
     <div>
+        <div class="header-background"></div>
+
         <div class="header">
             <span onclick="openNav()" class="micon">
                 <svg class="menu-icon" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
@@ -99,7 +101,59 @@
 
         <div>
             <div class="toc">
-                
+                <div class="">
+
+                </div>
+            </div>
+
+            <div class="highlights">
+
+            </div>
+
+            <div class="mconteiner">
+                <div id="combos" class="menus">
+                    <h4 class="menu-title">Combos</h4>
+                    <div class="moption">
+                        <div class="opt-info">
+                            <div class="item-name">
+                                <b>Combo Mega Dibu Smoked BBQ</b>
+                            </div>
+                            <div class="item-description">
+                                Mega hamburguesa de carne con muzarella y barbacoa ahumada, bacon, cebollita crispy, tomate y pan brioche.
+                            </div>
+                            <div class="item-price">
+                                <b>$2400</b>
+                            </div>
+                        </div>
+                        <div class="opt-img">
+                            <img src="./images/pedidos/1-1.png" class="oimg">
+                        </div>
+                    </div>
+                </div>
+
+                <center><div class="item-divider"></div></center>
+
+                <div id="pollos" class="menus">
+                    
+                </div>
+                <div id="snacks" class="menus">
+
+                </div>
+                <div id="cafeteria" class="menus">
+
+                </div>
+                <div id="postres" class="menus">
+
+                </div>
+                <div id="hamburguesas" class="menus">
+
+                </div>
+                <div id="cajita" class="menus">
+
+                </div>
+                <div id="bebidas" class="menus">
+
+                </div>
             </div>
         </div>
     </div>
